--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
 <body>
     <h1>Odin's Best Recipes</h1>
-    <ul><strong>Top Recipes:</strong>
+    <h3>
+    <ul><strong>Top Recipes:</strong><br></br>
         <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
         <li> <a href="./recipes/tacos.html">World's Best Tacos</a></li>
         <li><a href="./recipes/mac-and-cheese.html">World's Best Mac-and-cheese</a></li>
     </ul>
+    </h3>
 </body>
 </html>
