--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="stylesheet" href="style.css">
     <title>Recipes Home Page</title>
 </head>
 
 <body>
     <h1>Odin's Best Recipes</h1>
-    <h3>
-    <ul><strong>Top Recipes:</strong><br></br>
+    <h3>Top Recipes:</h3>
+    <ul>
         <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
         <li> <a href="./recipes/tacos.html">World's Best Tacos</a></li>
         <li><a href="./recipes/mac-and-cheese.html">World's Best Mac-and-cheese</a></li>
     </ul>
-    </h3>
 </body>
 </html>
